--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   </head>
 
   <body>
-    <h1>bouncing balls</h1>
     <canvas></canvas>
-
+		<p id='score'>Score: </p>
     <script src="main.js"></script>
   </body>
 </html>
-
